# polyval-rs

./: .rustfmt.toml  Cargo.toml  README.md  cargo-watch  clippy.toml
.github/workflows/: main.yml
benches/: polyval.rs
src/: aarch64.rs  experimental.rs  generic.rs  lib.rs  lite.rs  poly.rs  precomp.rs  soft.rs  tests.rs  x86.rs
src/backend/: aarch64.rs  generic.rs  mod.rs  soft.rs  x86.rs
